# med-learning-federated-system

./: README.md  data_export.py  data_setup.py  pyproject.toml  setenv  setup.sh
med-learning-federated-system/: pre_train_model.py
med-learning-federated-system/models/: basic_cnn_model.py
med-learning-federated-system/state/: server_strategy.py
med_learning_federated_system/: central_train_model.py  client_app.py  pre_train_model.py  server_app.py  setup_data.py  task.py
med_learning_federated_system/models/: resnet_cnn_model.py
med_learning_federated_system/state/: server_strategy.py
med_learning_federated_system/utils/: dirichlet_partition.py  evaluate.py
results/: isic-fedavg-exp1_final_metrics.csv  isic-fedavg-exp1_rounds.csv
results/centralized/: final_metrics.csv
results/centralized/continuation/: final_metrics.csv
