[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "med-learning-federated-system"
version = "1.0.0"
description = "Federated learning on ISIC 2019 skin lesion classification"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11,<2.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "pandas>=2.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "kagglehub>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["med_learning_federated_system"]

[tool.flwr.app]
publisher = "ssubram7"

[tool.flwr.app.components]
serverapp = "med_learning_federated_system.server_app:app"
clientapp = "med_learning_federated_system.client_app:app"

[tool.flwr.app.config]
num-server-rounds       = 50
num-clients             = 100
fraction-fit            = 0.1
fraction-evaluate       = 0.1
local-epochs            = 2
aggregation-method      = "fedavg"
alpha                   = 0.9
simulation-id           = "isic-fedavg-run-01"
pretrained-checkpoint   = ""

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100

[tool.flwr.federations.local-simulation.options.backend.client-resources]
num-cpus = 2
num-gpus = 0.0