[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "med-fl-isic"
version = "1.0.0"
description = "Federated learning for ISIC 2019 skin lesion classification (8-class)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.20.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "kagglehub>=0.2.0",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ssubram7"

[tool.flwr.app.components]
serverapp = "med_learning_federated_system.server_app:app"
clientapp = "med_learning_federated_system.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.5          # 50% of 10 clients = 5 sampled per round
local-epochs = 2
num-clients = 10
simulation-id = "isic-fedavg-exp1"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.2  # 5 clients, all run concurrently